@@ -21,18 +21,16 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.lang.invoke.MethodHandles;
 import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileStore;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.Paths;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -49,66 +47,75 @@ import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.function.BooleanSupplier;
-import java.util.function.Function;
 import java.util.zip.Adler32;
 import java.util.zip.Checksum;
 import java.util.zip.InflaterInputStream;
 
-import com.google.common.base.Strings;
+import org.apache.commons.io.IOUtils;
 import org.apache.http.client.HttpClient;
 import org.apache.lucene.codecs.CodecUtil;
 import org.apache.lucene.index.IndexCommit;
 import org.apache.lucene.index.IndexWriter;
+import org.apache.lucene.index.SegmentCommitInfo;
 import org.apache.lucene.index.SegmentInfos;
 import org.apache.lucene.store.Directory;
-import org.apache.lucene.store.FSDirectory;
-import org.apache.lucene.store.FilterDirectory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
 import org.apache.lucene.store.IndexOutput;
+import org.apache.lucene.util.Version;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.HttpClientUtil;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.client.solrj.impl.HttpSolrClient.Builder;
 import org.apache.solr.client.solrj.request.QueryRequest;
-import org.apache.solr.cloud.CloudDescriptor;
-import org.apache.solr.cloud.ZkController;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
-import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.FastInputStream;
-import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.core.DirectoryFactory;
 import org.apache.solr.core.DirectoryFactory.DirContext;
 import org.apache.solr.core.IndexDeletionPolicyWrapper;
 import org.apache.solr.core.SolrCore;
+import org.apache.solr.handler.ReplicationHandler.FileInfo;
 import org.apache.solr.request.LocalSolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.search.SolrIndexSearcher;
-import org.apache.solr.update.CdcrUpdateLog;
 import org.apache.solr.update.CommitUpdateCommand;
-import org.apache.solr.update.UpdateLog;
-import org.apache.solr.update.VersionInfo;
 import org.apache.solr.util.DefaultSolrThreadFactory;
 import org.apache.solr.util.FileUtils;
+import org.apache.solr.util.PropertiesInputStream;
 import org.apache.solr.util.PropertiesOutputStream;
 import org.apache.solr.util.RTimer;
 import org.apache.solr.util.RefCounted;
-import org.apache.solr.util.TestInjection;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import static org.apache.solr.common.params.CommonParams.JAVABIN;
 import static org.apache.solr.common.params.CommonParams.NAME;
-import static org.apache.solr.handler.ReplicationHandler.*;
+import static org.apache.solr.handler.ReplicationHandler.ALIAS;
+import static org.apache.solr.handler.ReplicationHandler.CHECKSUM;
+import static org.apache.solr.handler.ReplicationHandler.CMD_DETAILS;
+import static org.apache.solr.handler.ReplicationHandler.CMD_GET_FILE;
+import static org.apache.solr.handler.ReplicationHandler.CMD_GET_FILE_LIST;
+import static org.apache.solr.handler.ReplicationHandler.CMD_INDEX_VERSION;
+import static org.apache.solr.handler.ReplicationHandler.COMMAND;
+import static org.apache.solr.handler.ReplicationHandler.COMPRESSION;
+import static org.apache.solr.handler.ReplicationHandler.CONF_FILES;
+import static org.apache.solr.handler.ReplicationHandler.CONF_FILE_SHORT;
+import static org.apache.solr.handler.ReplicationHandler.EXTERNAL;
+import static org.apache.solr.handler.ReplicationHandler.FILE;
+import static org.apache.solr.handler.ReplicationHandler.FILE_STREAM;
+import static org.apache.solr.handler.ReplicationHandler.GENERATION;
+import static org.apache.solr.handler.ReplicationHandler.INTERNAL;
+import static org.apache.solr.handler.ReplicationHandler.MASTER_URL;
+import static org.apache.solr.handler.ReplicationHandler.OFFSET;
+import static org.apache.solr.handler.ReplicationHandler.SIZE;
 
 /**
  * <p> Provides functionality of downloading changed index files as well as config files and a timer for scheduling fetches from the
@@ -122,11 +129,11 @@ public class IndexFetcher {
 
   public static final String INDEX_PROPERTIES = "index.properties";
 
-  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+  private static final Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  private String masterUrl;
+  private final String masterUrl;
 
-  final ReplicationHandler replicationHandler;
+  private final ReplicationHandler replicationHandler;
 
   private volatile Date replicationStartTimeStamp;
   private RTimer replicationTimer;
@@ -137,18 +144,14 @@ public class IndexFetcher {
 
   private volatile List<Map<String, Object>> confFilesToDownload;
 
-  private volatile List<Map<String, Object>> tlogFilesToDownload;
-
   private volatile List<Map<String, Object>> filesDownloaded;
 
   private volatile List<Map<String, Object>> confFilesDownloaded;
 
-  private volatile List<Map<String, Object>> tlogFilesDownloaded;
-
   private volatile Map<String, Object> currentFile;
 
   private volatile DirectoryFileFetcher dirFileFetcher;
-
+  
   private volatile LocalFsFileFetcher localFileFetcher;
 
   private volatile ExecutorService fsyncService;
@@ -159,127 +162,40 @@ public class IndexFetcher {
 
   private boolean useExternalCompression = false;
 
-  boolean fetchFromLeader = false;
-
   private final HttpClient myHttpClient;
 
-  private Integer connTimeout;
-
-  private Integer soTimeout;
-
-  private boolean downloadTlogFiles = false;
-
-  private boolean skipCommitOnMasterVersionZero = true;
-
-  private boolean clearLocalIndexFirst = false;
-
-  private static final String INTERRUPT_RESPONSE_MESSAGE = "Interrupted while waiting for modify lock";
-
-  public static class IndexFetchResult {
-    private final String message;
-    private final boolean successful;
-    private final Throwable exception;
-
-    public static final String FAILED_BY_INTERRUPT_MESSAGE = "Fetching index failed by interrupt";
-    public static final String FAILED_BY_EXCEPTION_MESSAGE = "Fetching index failed by exception";
-
-    /** pre-defined results */
-    public static final IndexFetchResult ALREADY_IN_SYNC = new IndexFetchResult("Local index commit is already in sync with peer", true, null);
-    public static final IndexFetchResult INDEX_FETCH_FAILURE = new IndexFetchResult("Fetching lastest index is failed", false, null);
-    public static final IndexFetchResult INDEX_FETCH_SUCCESS = new IndexFetchResult("Fetching latest index is successful", true, null);
-    public static final IndexFetchResult LOCK_OBTAIN_FAILED = new IndexFetchResult("Obtaining SnapPuller lock failed", false, null);
-    public static final IndexFetchResult CONTAINER_IS_SHUTTING_DOWN = new IndexFetchResult("I was asked to replicate but CoreContainer is shutting down", false, null);
-    public static final IndexFetchResult MASTER_VERSION_ZERO = new IndexFetchResult("Index in peer is empty and never committed yet", true, null);
-    public static final IndexFetchResult NO_INDEX_COMMIT_EXIST = new IndexFetchResult("No IndexCommit in local index", false, null);
-    public static final IndexFetchResult PEER_INDEX_COMMIT_DELETED = new IndexFetchResult("No files to download because IndexCommit in peer was deleted", false, null);
-    public static final IndexFetchResult LOCAL_ACTIVITY_DURING_REPLICATION = new IndexFetchResult("Local index modification during replication", false, null);
-    public static final IndexFetchResult EXPECTING_NON_LEADER = new IndexFetchResult("Replicating from leader but I'm the shard leader", false, null);
-    public static final IndexFetchResult LEADER_IS_NOT_ACTIVE = new IndexFetchResult("Replicating from leader but leader is not active", false, null);
-
-    IndexFetchResult(String message, boolean successful, Throwable exception) {
-      this.message = message;
-      this.successful = successful;
-      this.exception = exception;
-    }
-
-    /*
-     * @return exception thrown if failed by exception or interrupt, otherwise null
-     */
-    public Throwable getException() {
-      return this.exception;
-    }
-
-    /*
-     * @return true if index fetch was successful, false otherwise
-     */
-    public boolean getSuccessful() {
-      return this.successful;
-    }
-
-    public String getMessage() {
-      return this.message;
-    }
-  }
-
-  private static HttpClient createHttpClient(SolrCore core, String httpBasicAuthUser, String httpBasicAuthPassword, boolean useCompression) {
+  private static HttpClient createHttpClient(SolrCore core, String connTimeout, String readTimeout, String httpBasicAuthUser, String httpBasicAuthPassword, boolean useCompression) {
     final ModifiableSolrParams httpClientParams = new ModifiableSolrParams();
+    httpClientParams.set(HttpClientUtil.PROP_CONNECTION_TIMEOUT, connTimeout != null ? connTimeout : "5000");
+    httpClientParams.set(HttpClientUtil.PROP_SO_TIMEOUT, readTimeout != null ? readTimeout : "20000");
     httpClientParams.set(HttpClientUtil.PROP_BASIC_AUTH_USER, httpBasicAuthUser);
     httpClientParams.set(HttpClientUtil.PROP_BASIC_AUTH_PASS, httpBasicAuthPassword);
     httpClientParams.set(HttpClientUtil.PROP_ALLOW_COMPRESSION, useCompression);
 
-    return HttpClientUtil.createClient(httpClientParams, core.getCoreContainer().getUpdateShardHandler().getRecoveryOnlyConnectionManager(), true);
+    return HttpClientUtil.createClient(httpClientParams, core.getCoreDescriptor().getCoreContainer().getUpdateShardHandler().getConnectionManager());
   }
 
   public IndexFetcher(final NamedList initArgs, final ReplicationHandler handler, final SolrCore sc) {
     solrCore = sc;
-    Object fetchFromLeader = initArgs.get(FETCH_FROM_LEADER);
-    if (fetchFromLeader != null && fetchFromLeader instanceof Boolean) {
-      this.fetchFromLeader = (boolean) fetchFromLeader;
-    }
-    Object skipCommitOnMasterVersionZero = initArgs.get(SKIP_COMMIT_ON_MASTER_VERSION_ZERO);
-    if (skipCommitOnMasterVersionZero != null && skipCommitOnMasterVersionZero instanceof Boolean) {
-      this.skipCommitOnMasterVersionZero = (boolean) skipCommitOnMasterVersionZero;
-    }
     String masterUrl = (String) initArgs.get(MASTER_URL);
-    if (masterUrl == null && !this.fetchFromLeader)
+    if (masterUrl == null)
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
               "'masterUrl' is required for a slave");
-    if (masterUrl != null && masterUrl.endsWith(ReplicationHandler.PATH)) {
+    if (masterUrl.endsWith("/replication")) {
       masterUrl = masterUrl.substring(0, masterUrl.length()-12);
-      log.warn("'masterUrl' must be specified without the "+ReplicationHandler.PATH+" suffix");
+      LOG.warn("'masterUrl' must be specified without the /replication suffix");
     }
     this.masterUrl = masterUrl;
-
+    
     this.replicationHandler = handler;
     String compress = (String) initArgs.get(COMPRESSION);
     useInternalCompression = INTERNAL.equals(compress);
     useExternalCompression = EXTERNAL.equals(compress);
-    connTimeout = getParameter(initArgs, HttpClientUtil.PROP_CONNECTION_TIMEOUT, 30000, null);
-    
-    // allow a master override for tests - you specify this in /replication slave section of solrconfig and some 
-    // test don't want to define this
-    soTimeout = Integer.getInteger("solr.indexfetcher.sotimeout", -1);
-    if (soTimeout == -1) {
-      soTimeout = getParameter(initArgs, HttpClientUtil.PROP_SO_TIMEOUT, 120000, null);
-    }
-
-    if (initArgs.getBooleanArg(TLOG_FILES) != null) {
-      downloadTlogFiles = initArgs.getBooleanArg(TLOG_FILES);
-    }
-
+    String connTimeout = (String) initArgs.get(HttpClientUtil.PROP_CONNECTION_TIMEOUT);
+    String readTimeout = (String) initArgs.get(HttpClientUtil.PROP_SO_TIMEOUT);
     String httpBasicAuthUser = (String) initArgs.get(HttpClientUtil.PROP_BASIC_AUTH_USER);
     String httpBasicAuthPassword = (String) initArgs.get(HttpClientUtil.PROP_BASIC_AUTH_PASS);
-    myHttpClient = createHttpClient(solrCore, httpBasicAuthUser, httpBasicAuthPassword, useExternalCompression);
-  }
-  
-  protected <T> T getParameter(NamedList initArgs, String configKey, T defaultValue, StringBuilder sb) {
-    T toReturn = defaultValue;
-    if (initArgs != null) {
-      T temp = (T) initArgs.get(configKey);
-      toReturn = (temp != null) ? temp : defaultValue;
-    }
-    if(sb!=null && toReturn != null) sb.append(configKey).append(" : ").append(toReturn).append(",");
-    return toReturn;
+    myHttpClient = createHttpClient(solrCore, connTimeout, readTimeout, httpBasicAuthUser, httpBasicAuthPassword, useExternalCompression);
   }
 
   /**
@@ -290,16 +206,14 @@ public class IndexFetcher {
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.set(COMMAND, CMD_INDEX_VERSION);
     params.set(CommonParams.WT, JAVABIN);
-    params.set(CommonParams.QT, ReplicationHandler.PATH);
+    params.set(CommonParams.QT, "/replication");
     QueryRequest req = new QueryRequest(params);
 
     // TODO modify to use shardhandler
-    try (HttpSolrClient client = new Builder(masterUrl)
-        .withHttpClient(myHttpClient)
-        .withConnectionTimeout(connTimeout)
-        .withSocketTimeout(soTimeout)
-        .build()) {
-
+    try (HttpSolrClient client = new HttpSolrClient(masterUrl, myHttpClient)) {
+      client.setSoTimeout(60000);
+      client.setConnectionTimeout(15000);
+      
       return client.request(req);
     } catch (SolrServerException e) {
       throw new SolrException(ErrorCode.SERVER_ERROR, e.getMessage(), e);
@@ -312,18 +226,15 @@ public class IndexFetcher {
   private void fetchFileList(long gen) throws IOException {
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.set(COMMAND,  CMD_GET_FILE_LIST);
-    params.set(TLOG_FILES, downloadTlogFiles);
     params.set(GENERATION, String.valueOf(gen));
     params.set(CommonParams.WT, JAVABIN);
-    params.set(CommonParams.QT, ReplicationHandler.PATH);
+    params.set(CommonParams.QT, "/replication");
     QueryRequest req = new QueryRequest(params);
 
     // TODO modify to use shardhandler
-    try (HttpSolrClient client = new HttpSolrClient.Builder(masterUrl)
-        .withHttpClient(myHttpClient)
-        .withConnectionTimeout(connTimeout)
-        .withSocketTimeout(soTimeout)
-        .build()) {
+    try (HttpSolrClient client = new HttpSolrClient(masterUrl, myHttpClient)) {
+      client.setSoTimeout(60000);
+      client.setConnectionTimeout(15000);
       NamedList response = client.request(req);
 
       List<Map<String, Object>> files = (List<Map<String,Object>>) response.get(CMD_GET_FILE_LIST);
@@ -331,100 +242,60 @@ public class IndexFetcher {
         filesToDownload = Collections.synchronizedList(files);
       else {
         filesToDownload = Collections.emptyList();
-        log.error("No files to download for index generation: "+ gen);
+        LOG.error("No files to download for index generation: "+ gen);
       }
 
       files = (List<Map<String,Object>>) response.get(CONF_FILES);
       if (files != null)
         confFilesToDownload = Collections.synchronizedList(files);
 
-      files = (List<Map<String, Object>>) response.get(TLOG_FILES);
-      if (files != null) {
-        tlogFilesToDownload = Collections.synchronizedList(files);
-      }
     } catch (SolrServerException e) {
       throw new IOException(e);
     }
   }
 
-  IndexFetchResult fetchLatestIndex(boolean forceReplication) throws IOException, InterruptedException {
+  boolean fetchLatestIndex(boolean forceReplication) throws IOException, InterruptedException {
     return fetchLatestIndex(forceReplication, false);
   }
-
+  
   /**
    * This command downloads all the necessary files from master to install a index commit point. Only changed files are
    * downloaded. It also downloads the conf files (if they are modified).
    *
-   * @param forceReplication force a replication in all cases
+   * @param forceReplication force a replication in all cases 
    * @param forceCoreReload force a core reload in all cases
    * @return true on success, false if slave is already in sync
    * @throws IOException if an exception occurs
    */
-  IndexFetchResult fetchLatestIndex(boolean forceReplication, boolean forceCoreReload) throws IOException, InterruptedException {
-
-    this.clearLocalIndexFirst = false;
+  boolean fetchLatestIndex(boolean forceReplication, boolean forceCoreReload) throws IOException, InterruptedException {
+    
     boolean cleanupDone = false;
     boolean successfulInstall = false;
     markReplicationStart();
     Directory tmpIndexDir = null;
-    String tmpIndexDirPath;
+    String tmpIndex;
     Directory indexDir = null;
     String indexDirPath;
     boolean deleteTmpIdxDir = true;
-    File tmpTlogDir = null;
-
+    
     if (!solrCore.getSolrCoreState().getLastReplicateIndexSuccess()) {
       // if the last replication was not a success, we force a full replication
       // when we are a bit more confident we may want to try a partial replication
       // if the error is connection related or something, but we have to be careful
       forceReplication = true;
-      log.info("Last replication failed, so I'll force replication");
     }
-
+    
     try {
-      if (fetchFromLeader) {
-        assert !solrCore.isClosed(): "Replication should be stopped before closing the core";
-        Replica replica = getLeaderReplica();
-        CloudDescriptor cd = solrCore.getCoreDescriptor().getCloudDescriptor();
-        if (cd.getCoreNodeName().equals(replica.getName())) {
-          return IndexFetchResult.EXPECTING_NON_LEADER;
-        }
-        if (replica.getState() != Replica.State.ACTIVE) {
-          log.info("Replica {} is leader but it's state is {}, skipping replication", replica.getName(), replica.getState());
-          return IndexFetchResult.LEADER_IS_NOT_ACTIVE;
-        }
-        if (!solrCore.getCoreContainer().getZkController().getClusterState().liveNodesContain(replica.getNodeName())) {
-          log.info("Replica {} is leader but it's not hosted on a live node, skipping replication", replica.getName());
-          return IndexFetchResult.LEADER_IS_NOT_ACTIVE;
-        }
-        if (!replica.getCoreUrl().equals(masterUrl)) {
-          masterUrl = replica.getCoreUrl();
-          log.info("Updated masterUrl to {}", masterUrl);
-          // TODO: Do we need to set forceReplication = true?
-        } else {
-          log.debug("masterUrl didn't change");
-        }
-      }
       //get the current 'replicateable' index version in the master
       NamedList response;
       try {
         response = getLatestVersion();
       } catch (Exception e) {
-        final String errorMsg = e.toString();
-        if (!Strings.isNullOrEmpty(errorMsg) && errorMsg.contains(INTERRUPT_RESPONSE_MESSAGE)) {
-            log.warn("Master at: " + masterUrl + " is not available. Index fetch failed by interrupt. Exception: " + errorMsg);
-            return new IndexFetchResult(IndexFetchResult.FAILED_BY_INTERRUPT_MESSAGE, false, e);
-        } else {
-            log.warn("Master at: " + masterUrl + " is not available. Index fetch failed by exception: " + errorMsg);
-            return new IndexFetchResult(IndexFetchResult.FAILED_BY_EXCEPTION_MESSAGE, false, e);
-        }
-    }
-
+        LOG.error("Master at: " + masterUrl + " is not available. Index fetch failed. Exception: " + e.getMessage());
+        return false;
+      }
       long latestVersion = (Long) response.get(CMD_INDEX_VERSION);
       long latestGeneration = (Long) response.get(GENERATION);
-
-      log.info("Master's generation: " + latestGeneration);
-      log.info("Master's version: " + latestVersion);
 
       // TODO: make sure that getLatestCommit only returns commit points for the main index (i.e. no side-car indexes)
       IndexCommit commit = solrCore.getDeletionPolicy().getLatestCommit();
@@ -434,8 +305,8 @@ public class IndexFetcher {
         try {
           searcherRefCounted = solrCore.getNewestSearcher(false);
           if (searcherRefCounted == null) {
-            log.warn("No open searcher found - fetch aborted");
-            return IndexFetchResult.NO_INDEX_COMMIT_EXIST;
+            LOG.warn("No open searcher found - fetch aborted");
+            return false;
           }
           commit = searcherRefCounted.get().getIndexReader().getIndexCommit();
         } finally {
@@ -444,53 +315,42 @@ public class IndexFetcher {
         }
       }
 
-      log.info("Slave's generation: " + commit.getGeneration());
-      log.info("Slave's version: " + IndexDeletionPolicyWrapper.getCommitTimestamp(commit));
-
       if (latestVersion == 0L) {
-        if (commit.getGeneration() != 0) {
+        if (forceReplication && commit.getGeneration() != 0) {
           // since we won't get the files for an empty index,
           // we just clear ours and commit
-          log.info("New index in Master. Deleting mine...");
           RefCounted<IndexWriter> iw = solrCore.getUpdateHandler().getSolrCoreState().getIndexWriter(solrCore);
           try {
             iw.get().deleteAll();
           } finally {
             iw.decref();
           }
-          assert TestInjection.injectDelayBeforeSlaveCommitRefresh();
-          if (skipCommitOnMasterVersionZero) {
-            openNewSearcherAndUpdateCommitPoint();
-          } else {
-            SolrQueryRequest req = new LocalSolrQueryRequest(solrCore, new ModifiableSolrParams());
-            solrCore.getUpdateHandler().commit(new CommitUpdateCommand(req, false));
-          }
+          SolrQueryRequest req = new LocalSolrQueryRequest(solrCore, new ModifiableSolrParams());
+          solrCore.getUpdateHandler().commit(new CommitUpdateCommand(req, false));
         }
-
+        
         //there is nothing to be replicated
         successfulInstall = true;
-        log.debug("Nothing to replicate, master's version is 0");
-        return IndexFetchResult.MASTER_VERSION_ZERO;
+        return true;
       }
-
+      
       // TODO: Should we be comparing timestamps (across machines) here?
       if (!forceReplication && IndexDeletionPolicyWrapper.getCommitTimestamp(commit) == latestVersion) {
         //master and slave are already in sync just return
-        log.info("Slave in sync with master.");
+        LOG.info("Slave in sync with master.");
         successfulInstall = true;
-        return IndexFetchResult.ALREADY_IN_SYNC;
+        return true;
       }
-      log.info("Starting replication process");
+      LOG.info("Master's generation: " + latestGeneration);
+      LOG.info("Slave's generation: " + commit.getGeneration());
+      LOG.info("Starting replication process");
       // get the list of files first
       fetchFileList(latestGeneration);
       // this can happen if the commit point is deleted before we fetch the file list.
       if (filesToDownload.isEmpty()) {
-        return IndexFetchResult.PEER_INDEX_COMMIT_DELETED;
+        return false;
       }
-      log.info("Number of files in latest index in master: " + filesToDownload.size());
-      if (tlogFilesToDownload != null) {
-        log.info("Number of tlog files in master: " + tlogFilesToDownload.size());
-      }
+      LOG.info("Number of files in latest index in master: " + filesToDownload.size());
 
       // Create the sync service
       fsyncService = ExecutorUtil.newMDCAwareSingleThreadExecutor(new DefaultSolrThreadFactory("fsyncService"));
@@ -502,36 +362,32 @@ public class IndexFetcher {
           .getCommitTimestamp(commit) >= latestVersion
           || commit.getGeneration() >= latestGeneration || forceReplication;
 
-      String timestamp = new SimpleDateFormat(SnapShooter.DATE_FMT, Locale.ROOT).format(new Date());
-      String tmpIdxDirName = "index." + timestamp;
-      tmpIndexDirPath = solrCore.getDataDir() + tmpIdxDirName;
+      String tmpIdxDirName = "index." + new SimpleDateFormat(SnapShooter.DATE_FMT, Locale.ROOT).format(new Date());
+      tmpIndex = solrCore.getDataDir() + tmpIdxDirName;
 
-      tmpIndexDir = solrCore.getDirectoryFactory().get(tmpIndexDirPath, DirContext.DEFAULT, solrCore.getSolrConfig().indexConfig.lockType);
-
-      // tmp dir for tlog files
-      if (tlogFilesToDownload != null) {
-        tmpTlogDir = new File(solrCore.getUpdateHandler().getUpdateLog().getLogDir(), "tlog." + timestamp);
-      }
-
+      tmpIndexDir = solrCore.getDirectoryFactory().get(tmpIndex, DirContext.DEFAULT, solrCore.getSolrConfig().indexConfig.lockType);
+      
       // cindex dir...
       indexDirPath = solrCore.getIndexDir();
       indexDir = solrCore.getDirectoryFactory().get(indexDirPath, DirContext.DEFAULT, solrCore.getSolrConfig().indexConfig.lockType);
 
       try {
 
-        // We will compare all the index files from the master vs the index files on disk to see if there is a mismatch
-        // in the metadata. If there is a mismatch for the same index file then we download the entire index
-        // (except when differential copy is applicable) again.
-        if (!isFullCopyNeeded && isIndexStale(indexDir)) {
+        SegmentInfos infos = SegmentInfos.readCommit(indexDir, commit.getSegmentsFileName());
+        Version oldestVersion = IndexFetcher.checkOldestVersion(infos);
+
+        //We will compare all the index files from the master vs the index files on disk to see if there is a mismatch
+        //in the metadata. If there is a mismatch for the same index file then we download the entire index again.
+        if (!isFullCopyNeeded && isIndexStale(indexDir, oldestVersion)) {
           isFullCopyNeeded = true;
         }
-
-        if (!isFullCopyNeeded && !fetchFromLeader) {
+        
+        if (!isFullCopyNeeded) {
           // a searcher might be using some flushed but not committed segments
           // because of soft commits (which open a searcher on IW's data)
           // so we need to close the existing searcher on the last commit
           // and wait until we are able to clean up all unused lucene files
-          if (solrCore.getCoreContainer().isZooKeeperAware()) {
+          if (solrCore.getCoreDescriptor().getCoreContainer().isZooKeeperAware()) {
             solrCore.closeSearcher();
           }
 
@@ -545,42 +401,33 @@ public class IndexFetcher {
             indexWriter.deleteUnusedFiles();
             while (hasUnusedFiles(indexDir, commit)) {
               indexWriter.deleteUnusedFiles();
-              log.info("Sleeping for 1000ms to wait for unused lucene index files to be delete-able");
+              LOG.info("Sleeping for 1000ms to wait for unused lucene index files to be delete-able");
               Thread.sleep(1000);
               c++;
               if (c >= 30)  {
-                log.warn("IndexFetcher unable to cleanup unused lucene index files so we must do a full copy instead");
+                LOG.warn("IndexFetcher unable to cleanup unused lucene index files so we must do a full copy instead");
                 isFullCopyNeeded = true;
                 break;
               }
             }
             if (c > 0)  {
-              log.info("IndexFetcher slept for " + (c * 1000) + "ms for unused lucene index files to be delete-able");
+              LOG.info("IndexFetcher slept for " + (c * 1000) + "ms for unused lucene index files to be delete-able");
             }
           } finally {
             writer.decref();
           }
+          solrCore.getUpdateHandler().getSolrCoreState().closeIndexWriter(solrCore, true);
         }
         boolean reloadCore = false;
-
+        
         try {
-          // we have to be careful and do this after we know isFullCopyNeeded won't be flipped
-          if (!isFullCopyNeeded) {
-            solrCore.getUpdateHandler().getSolrCoreState().closeIndexWriter(solrCore, true);
-          }
-
-          log.info("Starting download (fullCopy={}) to {}", isFullCopyNeeded, tmpIndexDir);
+          LOG.info("Starting download (fullCopy={}) to {}", isFullCopyNeeded, tmpIndexDir);
           successfulInstall = false;
-
-          long bytesDownloaded = downloadIndexFiles(isFullCopyNeeded, indexDir,
-              tmpIndexDir, indexDirPath, tmpIndexDirPath, latestGeneration);
-          if (tlogFilesToDownload != null) {
-            bytesDownloaded += downloadTlogFiles(tmpTlogDir, latestGeneration);
-            reloadCore = true; // reload update log
-          }
+          
+          final long bytesDownloaded = downloadIndexFiles(isFullCopyNeeded, indexDir, oldestVersion, tmpIndexDir, latestGeneration);
           final long timeTakenSeconds = getReplicationTimeElapsed();
-          final Long bytesDownloadedPerSecond = (timeTakenSeconds != 0 ? Long.valueOf(bytesDownloaded / timeTakenSeconds) : null);
-          log.info("Total time taken for download (fullCopy={},bytesDownloaded={}) : {} secs ({} bytes/sec) to {}",
+          final Long bytesDownloadedPerSecond = (timeTakenSeconds != 0 ? new Long(bytesDownloaded/timeTakenSeconds) : null);
+          LOG.info("Total time taken for download (fullCopy={},bytesDownloaded={}) : {} secs ({} bytes/sec) to {}",
               isFullCopyNeeded, bytesDownloaded, timeTakenSeconds, bytesDownloadedPerSecond, tmpIndexDir);
 
           Collection<Map<String,Object>> modifiedConfFiles = getModifiedConfFiles(confFilesToDownload);
@@ -588,29 +435,23 @@ public class IndexFetcher {
             reloadCore = true;
             downloadConfFiles(confFilesToDownload, latestGeneration);
             if (isFullCopyNeeded) {
-              successfulInstall = solrCore.modifyIndexProps(tmpIdxDirName);
-              if (successfulInstall) deleteTmpIdxDir = false;
+              successfulInstall = IndexFetcher.modifyIndexProps(solrCore, tmpIdxDirName);
+              deleteTmpIdxDir = false;
             } else {
               successfulInstall = moveIndexFiles(tmpIndexDir, indexDir);
-            }
-            if (tlogFilesToDownload != null) {
-              // move tlog files and refresh ulog only if we successfully installed a new index
-              successfulInstall &= moveTlogFiles(tmpTlogDir);
             }
             if (successfulInstall) {
               if (isFullCopyNeeded) {
                 // let the system know we are changing dir's and the old one
                 // may be closed
                 if (indexDir != null) {
-                  if (!this.clearLocalIndexFirst) {//it was closed earlier
-                    solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
-                  }
-                  // Cleanup all index files not associated with any *named* snapshot.
-                  solrCore.deleteNonSnapshotIndexFiles(indexDirPath);
+                  LOG.info("removing old index directory " + indexDir);
+                  solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
+                  solrCore.getDirectoryFactory().remove(indexDir);
                 }
               }
-
-              log.info("Configuration files are modified, core will be reloaded");
+              
+              LOG.info("Configuration files are modified, core will be reloaded");
               logReplicationTimeAndConfFiles(modifiedConfFiles,
                   successfulInstall);// write to a file time of replication and
                                      // conf files.
@@ -618,14 +459,10 @@ public class IndexFetcher {
           } else {
             terminateAndWaitFsyncService();
             if (isFullCopyNeeded) {
-              successfulInstall = solrCore.modifyIndexProps(tmpIdxDirName);
-              if (successfulInstall) deleteTmpIdxDir = false;
+              successfulInstall = IndexFetcher.modifyIndexProps(solrCore, tmpIdxDirName);
+              deleteTmpIdxDir = false;
             } else {
               successfulInstall = moveIndexFiles(tmpIndexDir, indexDir);
-            }
-            if (tlogFilesToDownload != null) {
-              // move tlog files and refresh ulog only if we successfully installed a new index
-              successfulInstall &= moveTlogFiles(tmpTlogDir);
             }
             if (successfulInstall) {
               logReplicationTimeAndConfFiles(modifiedConfFiles,
@@ -633,16 +470,14 @@ public class IndexFetcher {
             }
           }
         } finally {
-          solrCore.searchEnabled = true;
-          solrCore.indexEnabled = true;
           if (!isFullCopyNeeded) {
             solrCore.getUpdateHandler().getSolrCoreState().openIndexWriter(solrCore);
           }
         }
-
+        
         // we must reload the core after we open the IW back up
        if (successfulInstall && (reloadCore || forceCoreReload)) {
-         log.info("Reloading SolrCore {}", solrCore.getName());
+          LOG.info("Reloading SolrCore {}", solrCore.getName());
           reloadCore();
         }
 
@@ -651,7 +486,7 @@ public class IndexFetcher {
             // let the system know we are changing dir's and the old one
             // may be closed
             if (indexDir != null) {
-              log.info("removing old index directory " + indexDir);
+              LOG.info("removing old index directory " + indexDir);
               solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
               solrCore.getDirectoryFactory().remove(indexDir);
             }
@@ -659,25 +494,25 @@ public class IndexFetcher {
           if (isFullCopyNeeded) {
             solrCore.getUpdateHandler().newIndexWriter(isFullCopyNeeded);
           }
-
+          
           openNewSearcherAndUpdateCommitPoint();
         }
-
+        
         if (!isFullCopyNeeded && !forceReplication && !successfulInstall) {
-          cleanup(solrCore, tmpIndexDir, indexDir, deleteTmpIdxDir, tmpTlogDir, successfulInstall);
+          cleanup(solrCore, tmpIndexDir, indexDir, deleteTmpIdxDir, successfulInstall);
           cleanupDone = true;
           // we try with a full copy of the index
-          log.warn(
+          LOG.warn(
               "Replication attempt was not successful - trying a full index replication reloadCore={}",
               reloadCore);
-          successfulInstall = fetchLatestIndex(true, reloadCore).getSuccessful();
+          successfulInstall = fetchLatestIndex(true, reloadCore);
         }
-
+        
         markReplicationStop();
-        return successfulInstall ? IndexFetchResult.INDEX_FETCH_SUCCESS : IndexFetchResult.INDEX_FETCH_FAILURE;
+        return successfulInstall;
       } catch (ReplicationHandlerException e) {
-        log.error("User aborted Replication");
-        return new IndexFetchResult(IndexFetchResult.FAILED_BY_EXCEPTION_MESSAGE, false, e);
+        LOG.error("User aborted Replication");
+        return false;
       } catch (SolrException e) {
         throw e;
       } catch (InterruptedException e) {
@@ -687,37 +522,25 @@ public class IndexFetcher {
       }
     } finally {
       if (!cleanupDone) {
-        cleanup(solrCore, tmpIndexDir, indexDir, deleteTmpIdxDir, tmpTlogDir, successfulInstall);
+        cleanup(solrCore, tmpIndexDir, indexDir, deleteTmpIdxDir, successfulInstall);
       }
     }
   }
 
-  private Replica getLeaderReplica() throws InterruptedException {
-    ZkController zkController = solrCore.getCoreContainer().getZkController();
-    CloudDescriptor cd = solrCore.getCoreDescriptor().getCloudDescriptor();
-    Replica leaderReplica = zkController.getZkStateReader().getLeaderRetry(
-        cd.getCollectionName(), cd.getShardId());
-    return leaderReplica;
-  }
-
   private void cleanup(final SolrCore core, Directory tmpIndexDir,
-      Directory indexDir, boolean deleteTmpIdxDir, File tmpTlogDir, boolean successfulInstall) throws IOException {
+      Directory indexDir, boolean deleteTmpIdxDir, boolean successfulInstall) throws IOException {
     try {
       if (!successfulInstall) {
         try {
           logReplicationTimeAndConfFiles(null, successfulInstall);
         } catch (Exception e) {
-          // this can happen on shutdown, a fetch may be running in a thread after DirectoryFactory is closed
-          log.warn("Could not log failed replication details", e);
+          LOG.error("caught", e);
         }
       }
 
-      if (core.getCoreContainer().isZooKeeperAware()) {
-        // we only track replication success in SolrCloud mode
-        core.getUpdateHandler().getSolrCoreState().setLastReplicateIndexSuccess(successfulInstall);
-      }
+      core.getUpdateHandler().getSolrCoreState().setLastReplicateIndexSuccess(successfulInstall);
 
-      filesToDownload = filesDownloaded = confFilesDownloaded = confFilesToDownload = tlogFilesToDownload = tlogFilesDownloaded = null;
+      filesToDownload = filesDownloaded = confFilesDownloaded = confFilesToDownload = null;
       markReplicationStop();
       dirFileFetcher = null;
       localFileFetcher = null;
@@ -726,32 +549,21 @@ public class IndexFetcher {
       stop = false;
       fsyncException = null;
     } finally {
-      // order below is important
-      try {
-        if (tmpIndexDir != null && deleteTmpIdxDir) {
+      if (deleteTmpIdxDir && tmpIndexDir != null) {
+        try {
           core.getDirectoryFactory().doneWithDirectory(tmpIndexDir);
           core.getDirectoryFactory().remove(tmpIndexDir);
+        } catch (IOException e) {
+          SolrException.log(LOG, "Error removing directory " + tmpIndexDir, e);
         }
-      } catch (Exception e) {
-        SolrException.log(log, e);
-      } finally {
-        try {
-          if (tmpIndexDir != null) core.getDirectoryFactory().release(tmpIndexDir);
-        } catch (Exception e) {
-          SolrException.log(log, e);
-        }
-        try {
-          if (indexDir != null) {
-            core.getDirectoryFactory().release(indexDir);
-          }
-        } catch (Exception e) {
-          SolrException.log(log, e);
-        }
-        try {
-          if (tmpTlogDir != null) delTree(tmpTlogDir);
-        } catch (Exception e) {
-          SolrException.log(log, e);
-        }
+      }
+
+      if (tmpIndexDir != null) {
+        core.getDirectoryFactory().release(tmpIndexDir);
+      }
+
+      if (indexDir != null) {
+        core.getDirectoryFactory().release(indexDir);
       }
     }
   }
@@ -763,7 +575,7 @@ public class IndexFetcher {
     String[] allFiles = indexDir.listAll();
     for (String file : allFiles) {
       if (!file.equals(segmentsFileName) && !currentFiles.contains(file) && !file.endsWith(".lock")) {
-        log.info("Found unused file: " + file);
+        LOG.info("Found unused file: " + file);
         return true;
       }
     }
@@ -803,24 +615,21 @@ public class IndexFetcher {
     Directory dir = null;
     try {
       dir = solrCore.getDirectoryFactory().get(solrCore.getDataDir(), DirContext.META_DATA, solrCore.getSolrConfig().indexConfig.lockType);
-
+      
       int indexCount = 1, confFilesCount = 1;
       if (props.containsKey(TIMES_INDEX_REPLICATED)) {
-        indexCount = Integer.parseInt(props.getProperty(TIMES_INDEX_REPLICATED)) + 1;
+        indexCount = Integer.valueOf(props.getProperty(TIMES_INDEX_REPLICATED)) + 1;
       }
       StringBuilder sb = readToStringBuilder(replicationTime, props.getProperty(INDEX_REPLICATED_AT_LIST));
       props.setProperty(INDEX_REPLICATED_AT_LIST, sb.toString());
       props.setProperty(INDEX_REPLICATED_AT, String.valueOf(replicationTime));
       props.setProperty(PREVIOUS_CYCLE_TIME_TAKEN, String.valueOf(replicationTimeTaken));
       props.setProperty(TIMES_INDEX_REPLICATED, String.valueOf(indexCount));
-      if (clearLocalIndexFirst) {
-        props.setProperty(CLEARED_LOCAL_IDX, "true");
-      }
       if (modifiedConfFiles != null && !modifiedConfFiles.isEmpty()) {
         props.setProperty(CONF_FILES_REPLICATED, confFiles.toString());
         props.setProperty(CONF_FILES_REPLICATED_AT, String.valueOf(replicationTime));
         if (props.containsKey(TIMES_CONFIG_REPLICATED)) {
-          confFilesCount = Integer.parseInt(props.getProperty(TIMES_CONFIG_REPLICATED)) + 1;
+          confFilesCount = Integer.valueOf(props.getProperty(TIMES_CONFIG_REPLICATED)) + 1;
         }
         props.setProperty(TIMES_CONFIG_REPLICATED, String.valueOf(confFilesCount));
       }
@@ -829,28 +638,24 @@ public class IndexFetcher {
       if (!successfulInstall) {
         int numFailures = 1;
         if (props.containsKey(TIMES_FAILED)) {
-          numFailures = Integer.parseInt(props.getProperty(TIMES_FAILED)) + 1;
+          numFailures = Integer.valueOf(props.getProperty(TIMES_FAILED)) + 1;
         }
         props.setProperty(TIMES_FAILED, String.valueOf(numFailures));
         props.setProperty(REPLICATION_FAILED_AT, String.valueOf(replicationTime));
         sb = readToStringBuilder(replicationTime, props.getProperty(REPLICATION_FAILED_AT_LIST));
         props.setProperty(REPLICATION_FAILED_AT_LIST, sb.toString());
       }
-      
-      
-      String tmpFileName = REPLICATION_PROPERTIES + "." + System.nanoTime();
-      final IndexOutput out = dir.createOutput(tmpFileName, DirectoryFactory.IOCONTEXT_NO_CACHE);
+
+      final IndexOutput out = dir.createOutput(REPLICATION_PROPERTIES, DirectoryFactory.IOCONTEXT_NO_CACHE);
       Writer outFile = new OutputStreamWriter(new PropertiesOutputStream(out), StandardCharsets.UTF_8);
       try {
         props.store(outFile, "Replication details");
-        dir.sync(Collections.singleton(tmpFileName));
+        dir.sync(Collections.singleton(REPLICATION_PROPERTIES));
       } finally {
         IOUtils.closeQuietly(outFile);
       }
-      
-      solrCore.getDirectoryFactory().renameWithOverwrite(dir, tmpFileName, REPLICATION_PROPERTIES);
     } catch (Exception e) {
-      log.warn("Exception while updating statistics", e);
+      LOG.warn("Exception while updating statistics", e);
     } finally {
       if (dir != null) {
         solrCore.getDirectoryFactory().release(dir);
@@ -899,45 +704,48 @@ public class IndexFetcher {
   }
 
   private void openNewSearcherAndUpdateCommitPoint() throws IOException {
+    SolrQueryRequest req = new LocalSolrQueryRequest(solrCore,
+        new ModifiableSolrParams());
+    
     RefCounted<SolrIndexSearcher> searcher = null;
     IndexCommit commitPoint;
-    // must get the latest solrCore object because the one we have might be closed because of a reload
-    // todo stop keeping solrCore around
-    SolrCore core = solrCore.getCoreContainer().getCore(solrCore.getName());
     try {
       Future[] waitSearcher = new Future[1];
-      searcher = core.getSearcher(true, true, waitSearcher, true);
+      searcher = solrCore.getSearcher(true, true, waitSearcher, true);
       if (waitSearcher[0] != null) {
         try {
           waitSearcher[0].get();
         } catch (InterruptedException | ExecutionException e) {
-          SolrException.log(log, e);
+          SolrException.log(LOG, e);
         }
       }
       commitPoint = searcher.get().getIndexReader().getIndexCommit();
     } finally {
+      req.close();
       if (searcher != null) {
         searcher.decref();
       }
-      core.close();
     }
 
     // update the commit point in replication handler
     replicationHandler.indexCommitPoint = commitPoint;
-
+    
   }
 
   private void reloadCore() {
     final CountDownLatch latch = new CountDownLatch(1);
-    new Thread(() -> {
-      try {
-        solrCore.getCoreContainer().reload(solrCore.getName());
-      } catch (Exception e) {
-        log.error("Could not reload core ", e);
-      } finally {
-        latch.countDown();
+    new Thread() {
+      @Override
+      public void run() {
+        try {
+          solrCore.getCoreDescriptor().getCoreContainer().reload(solrCore.getName());
+        } catch (Exception e) {
+          LOG.error("Could not reload core ", e);
+        } finally {
+          latch.countDown();
+        }
       }
-    }).start();
+    }.start();
     try {
       latch.await();
     } catch (InterruptedException e) {
@@ -947,8 +755,8 @@ public class IndexFetcher {
   }
 
   private void downloadConfFiles(List<Map<String, Object>> confFilesToDownload, long latestGeneration) throws Exception {
-    log.info("Starting download of configuration files from master: " + confFilesToDownload);
-    confFilesDownloaded = Collections.synchronizedList(new ArrayList<>());
+    LOG.info("Starting download of configuration files from master: " + confFilesToDownload);
+    confFilesDownloaded = Collections.synchronizedList(new ArrayList<Map<String, Object>>());
     File tmpconfDir = new File(solrCore.getResourceLoader().getConfigDir(), "conf." + getDateAsStr(new Date()));
     try {
       boolean status = tmpconfDir.mkdirs();
@@ -958,7 +766,7 @@ public class IndexFetcher {
       }
       for (Map<String, Object> file : confFilesToDownload) {
         String saveAs = (String) (file.get(ALIAS) == null ? file.get(NAME) : file.get(ALIAS));
-        localFileFetcher = new LocalFsFileFetcher(tmpconfDir, file, saveAs, CONF_FILE_SHORT, latestGeneration);
+        localFileFetcher = new LocalFsFileFetcher(tmpconfDir, file, saveAs, true, latestGeneration);
         currentFile = file;
         localFileFetcher.fetchFile();
         confFilesDownloaded.add(new HashMap<>(file));
@@ -973,175 +781,43 @@ public class IndexFetcher {
   }
 
   /**
-   * Download all the tlog files to the temp tlog directory.
-   */
-  private long downloadTlogFiles(File tmpTlogDir, long latestGeneration) throws Exception {
-    log.info("Starting download of tlog files from master: " + tlogFilesToDownload);
-    tlogFilesDownloaded = Collections.synchronizedList(new ArrayList<>());
-    long bytesDownloaded = 0;
-
-    boolean status = tmpTlogDir.mkdirs();
-    if (!status) {
-      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
-          "Failed to create temporary tlog folder: " + tmpTlogDir.getName());
-    }
-    for (Map<String, Object> file : tlogFilesToDownload) {
-      String saveAs = (String) (file.get(ALIAS) == null ? file.get(NAME) : file.get(ALIAS));
-      localFileFetcher = new LocalFsFileFetcher(tmpTlogDir, file, saveAs, TLOG_FILE, latestGeneration);
-      currentFile = file;
-      localFileFetcher.fetchFile();
-      bytesDownloaded += localFileFetcher.getBytesDownloaded();
-      tlogFilesDownloaded.add(new HashMap<>(file));
-    }
-    return bytesDownloaded;
-  }
-
-  /**
    * Download the index files. If a new index is needed, download all the files.
    *
    * @param downloadCompleteIndex is it a fresh index copy
    * @param indexDir                 the indexDir to be merged to
-   * @param tmpIndexDir              the directory to which files need to be downloaded to
-   * @param indexDirPath             the path of indexDir
+   * @param version                  Version of index
+   * @param tmpIndexDir              the directory to which files need to be downloadeed to
    * @param latestGeneration         the version number
    *
    * @return number of bytes downloaded
    */
-  private long downloadIndexFiles(boolean downloadCompleteIndex, Directory indexDir, Directory tmpIndexDir,
-                                  String indexDirPath, String tmpIndexDirPath, long latestGeneration)
+  private long downloadIndexFiles(boolean downloadCompleteIndex, Directory indexDir, Version version, Directory tmpIndexDir, long latestGeneration)
       throws Exception {
-    if (log.isDebugEnabled()) {
-      log.debug("Download files to dir: " + Arrays.asList(indexDir.listAll()));
+    if (LOG.isDebugEnabled()) {
+      LOG.debug("Download files to dir: " + Arrays.asList(indexDir.listAll()));
     }
     long bytesDownloaded = 0;
-    long bytesSkippedCopying = 0;
-    boolean doDifferentialCopy = (indexDir instanceof FSDirectory ||
-        (indexDir instanceof FilterDirectory && FilterDirectory.unwrap(indexDir) instanceof FSDirectory))
-        && (tmpIndexDir instanceof FSDirectory ||
-        (tmpIndexDir instanceof FilterDirectory && FilterDirectory.unwrap(tmpIndexDir) instanceof FSDirectory));
-
-
-    long totalSpaceRequired = 0;
-    for (Map<String, Object> file : filesToDownload) {
-      long size = (Long) file.get(SIZE);
-      totalSpaceRequired += size;
-    }
-
-    log.info("tmpIndexDir_type  : " + tmpIndexDir.getClass() + " , " + FilterDirectory.unwrap(tmpIndexDir));
-    long usableSpace = usableDiskSpaceProvider.apply(tmpIndexDirPath);
-    if (getApproxTotalSpaceReqd(totalSpaceRequired) > usableSpace) {
-      deleteFilesInAdvance(indexDir, indexDirPath, totalSpaceRequired, usableSpace);
-    }
-
     for (Map<String,Object> file : filesToDownload) {
       String filename = (String) file.get(NAME);
       long size = (Long) file.get(SIZE);
-      CompareResult compareResult = compareFile(indexDir, filename, size, (Long) file.get(CHECKSUM));
-      boolean alwaysDownload = filesToAlwaysDownloadIfNoChecksums(filename, size, compareResult);
-      log.debug("Downloading file={} size={} checksum={} alwaysDownload={}", filename, size, file.get(CHECKSUM), alwaysDownload);
-      if (!compareResult.equal || downloadCompleteIndex || alwaysDownload) {
-        File localFile = new File(indexDirPath, filename);
-        if (downloadCompleteIndex && doDifferentialCopy && compareResult.equal && compareResult.checkSummed
-            && localFile.exists()) {
-          log.info("Don't need to download this file. Local file's path is: {}, checksum is: {}",
-              localFile.getAbsolutePath(), file.get(CHECKSUM));
-          // A hard link here should survive the eventual directory move, and should be more space efficient as
-          // compared to a file copy. TODO: Maybe we could do a move safely here?
-          Files.createLink(new File(tmpIndexDirPath, filename).toPath(), localFile.toPath());
-          bytesSkippedCopying += localFile.length();
-        } else {
-          dirFileFetcher = new DirectoryFileFetcher(tmpIndexDir, file,
-              (String) file.get(NAME), FILE, latestGeneration);
-          currentFile = file;
-          dirFileFetcher.fetchFile();
-          bytesDownloaded += dirFileFetcher.getBytesDownloaded();
-        }
+      CompareResult compareResult = compareFile(indexDir, version, filename, size, (Long) file.get(CHECKSUM));
+      if (!compareResult.equal || downloadCompleteIndex
+          || filesToAlwaysDownloadIfNoChecksums(filename, size, compareResult)) {
+        dirFileFetcher = new DirectoryFileFetcher(tmpIndexDir, file,
+            (String) file.get(NAME), false, latestGeneration);
+        currentFile = file;
+        dirFileFetcher.fetchFile();
+        bytesDownloaded += dirFileFetcher.getBytesDownloaded();
         filesDownloaded.add(new HashMap<>(file));
       } else {
-        log.debug("Skipping download for {} because it already exists", file.get(NAME));
+        LOG.info("Skipping download for " + file.get(NAME)
+            + " because it already exists");
       }
     }
-    log.info("Bytes downloaded: {}, Bytes skipped downloading: {}", bytesDownloaded, bytesSkippedCopying);
     return bytesDownloaded;
   }
 
-  //only for testing purposes. do not use this anywhere else
-  //-----------START----------------------
-  static BooleanSupplier testWait = () -> true;
-  static Function<String, Long> usableDiskSpaceProvider = dir -> getUsableSpace(dir);
-  //------------ END---------------------
-
-
-  private static Long getUsableSpace(String dir) {
-    try {
-      File file = new File(dir);
-      if (!file.exists()) {
-        file = file.getParentFile();
-        if (!file.exists()) {//this is not a disk directory . so just pretend that there is enough space
-          return Long.MAX_VALUE;
-        }
-      }
-      FileStore fileStore = Files.getFileStore(file.toPath());
-      return fileStore.getUsableSpace();
-    } catch (IOException e) {
-      throw new SolrException(ErrorCode.SERVER_ERROR, "Could not free disk space", e);
-    }
-  }
-
-
-
-  private long getApproxTotalSpaceReqd(long totalSpaceRequired) {
-    long approxTotalSpaceReqd = (long) (totalSpaceRequired * 1.05);// add 5% extra for safety
-    approxTotalSpaceReqd += (100 * 1024 * 1024); //we should have an extra of 100MB free after everything is downloaded
-    return approxTotalSpaceReqd;
-  }
-
-  private void deleteFilesInAdvance(Directory indexDir, String indexDirPath, long usableDiskSpace, long totalSpaceRequired) throws IOException {
-    long actualSpaceReqd = totalSpaceRequired;
-    List<String> filesTobeDeleted = new ArrayList<>();
-    long clearedSpace = 0;
-    //go through each file to check if this needs to be deleted
-    for (String f : indexDir.listAll()) {
-      for (Map<String, Object> fileInfo : filesToDownload) {
-        if (f.equals(fileInfo.get(NAME))) {
-          String filename = (String) fileInfo.get(NAME);
-          long size = (Long) fileInfo.get(SIZE);
-          CompareResult compareResult = compareFile(indexDir, filename, size, (Long) fileInfo.get(CHECKSUM));
-          if (!compareResult.equal || filesToAlwaysDownloadIfNoChecksums(f, size, compareResult)) {
-            filesTobeDeleted.add(f);
-            clearedSpace += size;
-          } else {
-            /*this file will not be downloaded*/
-            actualSpaceReqd -= size;
-          }
-        }
-      }
-    }
-    if (usableDiskSpace > getApproxTotalSpaceReqd(actualSpaceReqd)) {
-      // after considering the files actually available locally we really don't need to do any delete
-      return;
-    }
-    log.info("This disk does not have enough space to download the index from leader/master. So cleaning up the local index. " +
-        " This may lead to loss of data/or node if index replication fails in between");
-    //now we should disable searchers and index writers because this core will not have all the required files
-    this.clearLocalIndexFirst = true;
-    this.solrCore.searchEnabled = false;
-    this.solrCore.indexEnabled = false;
-    solrCore.getDirectoryFactory().doneWithDirectory(indexDir);
-    solrCore.deleteNonSnapshotIndexFiles(indexDirPath);
-    this.solrCore.closeSearcher();
-    assert testWait.getAsBoolean();
-    solrCore.getUpdateHandler().getSolrCoreState().closeIndexWriter(this.solrCore, false);
-    for (String f : filesTobeDeleted) {
-      try {
-        indexDir.deleteFile(f);
-      } catch (FileNotFoundException | NoSuchFileException e) {
-        //no problem , it was deleted by someone else
-      }
-    }
-  }
-
-  static boolean filesToAlwaysDownloadIfNoChecksums(String filename,
+  private boolean filesToAlwaysDownloadIfNoChecksums(String filename,
       long size, CompareResult compareResult) {
     // without checksums to compare, we always download .si, .liv, segments_N,
     // and any very small files
@@ -1149,48 +825,60 @@ public class IndexFetcher {
     || filename.startsWith("segments_") || size < _100K);
   }
 
+  protected static Version checkOldestVersion(SegmentInfos infos) {
+    // we treat these files as if they all the oldest version we see
+    Version oldestVersion = Version.LUCENE_CURRENT;
+    for (SegmentCommitInfo commitInfo : infos) {
+      Version version = commitInfo.info.getVersion();
+      if (oldestVersion.onOrAfter(version)) {
+        oldestVersion = version;
+      }
+    }
+    return oldestVersion;
+  }
+
   protected static class CompareResult {
     boolean equal = false;
     boolean checkSummed = false;
   }
 
-  protected static CompareResult compareFile(Directory indexDir, String filename, Long backupIndexFileLen, Long backupIndexFileChecksum) {
+  protected static CompareResult compareFile(Directory indexDir, Version version, String filename, Long backupIndexFileLen, Long backupIndexFileChecksum) {
     CompareResult compareResult = new CompareResult();
     try {
       try (final IndexInput indexInput = indexDir.openInput(filename, IOContext.READONCE)) {
         long indexFileLen = indexInput.length();
         long indexFileChecksum = 0;
-        
-        if (backupIndexFileChecksum != null) {
+
+        if (backupIndexFileChecksum != null && version.onOrAfter(Version.LUCENE_4_8_0)) {
           try {
             indexFileChecksum = CodecUtil.retrieveChecksum(indexInput);
             compareResult.checkSummed = true;
           } catch (Exception e) {
-            log.warn("Could not retrieve checksum from file.", e);
+            LOG.warn("Could not retrieve checksum from file.", e);
           }
         }
-
+        
         if (!compareResult.checkSummed) {
           // we don't have checksums to compare
-
+          
           if (indexFileLen == backupIndexFileLen) {
             compareResult.equal = true;
             return compareResult;
           } else {
-            log.info(
+            LOG.warn(
                 "File {} did not match. expected length is {} and actual length is {}", filename, backupIndexFileLen, indexFileLen);
             compareResult.equal = false;
             return compareResult;
           }
         }
-
+        
         // we have checksums to compare
-
+        
         if (indexFileLen == backupIndexFileLen && indexFileChecksum == backupIndexFileChecksum) {
           compareResult.equal = true;
           return compareResult;
         } else {
-          log.warn("File {} did not match. expected checksum is {} and actual is checksum {}. " +
+          LOG.warn("File {} did not match. expected checksum is {} and actual is checksum {}. " +
               "expected length is {} and actual length is {}", filename, backupIndexFileChecksum, indexFileChecksum,
               backupIndexFileLen, indexFileLen);
           compareResult.equal = false;
@@ -1201,7 +889,7 @@ public class IndexFetcher {
       compareResult.equal = false;
       return compareResult;
     } catch (IOException e) {
-      log.error("Could not read file " + filename + ". Downloading it again", e);
+      LOG.error("Could not read file " + filename + ". Downloading it again", e);
       compareResult.equal = false;
       return compareResult;
     }
@@ -1218,7 +906,7 @@ public class IndexFetcher {
     } catch (NoSuchFileException | FileNotFoundException e) {
       return false;
     }
-  }
+  }  
 
   /**
    * All the files which are common between master and slave must have same size and same checksum else we assume
@@ -1227,20 +915,20 @@ public class IndexFetcher {
    * @return true if the index stale and we need to download a fresh copy, false otherwise.
    * @throws IOException  if low level io error
    */
-  private boolean isIndexStale(Directory dir) throws IOException {
+  private boolean isIndexStale(Directory dir, Version indexVersion) throws IOException {
     for (Map<String, Object> file : filesToDownload) {
       String filename = (String) file.get(NAME);
       Long length = (Long) file.get(SIZE);
       Long checksum = (Long) file.get(CHECKSUM);
       if (slowFileExists(dir, filename)) {
         if (checksum != null) {
-          if (!(compareFile(dir, filename, length, checksum).equal)) {
+          if (!(compareFile(dir, indexVersion, filename, length, checksum).equal)) {
             // file exists and size or checksum is different, therefore we must download it again
             return true;
           }
         } else {
           if (length != dir.fileLength(filename)) {
-            log.warn("File {} did not match. expected length is {} and actual length is {}",
+            LOG.warn("File {} did not match. expected length is {} and actual length is {}",
                 filename, length, dir.fileLength(filename));
             return true;
           }
@@ -1255,25 +943,25 @@ public class IndexFetcher {
    * <p/>
    */
   private boolean moveAFile(Directory tmpIdxDir, Directory indexDir, String fname) {
-    log.debug("Moving file: {}", fname);
+    LOG.debug("Moving file: {}", fname);
     boolean success = false;
     try {
       if (slowFileExists(indexDir, fname)) {
-        log.warn("Cannot complete replication attempt because file already exists:" + fname);
+        LOG.warn("Cannot complete replication attempt because file already exists:" + fname);
         
         // we fail - we downloaded the files we need, if we can't move one in, we can't
         // count on the correct index
         return false;
       }
     } catch (IOException e) {
-      SolrException.log(log, "could not check if a file exists", e);
+      SolrException.log(LOG, "could not check if a file exists", e);
       return false;
     }
     try {
       solrCore.getDirectoryFactory().move(tmpIdxDir, indexDir, fname, DirectoryFactory.IOCONTEXT_NO_CACHE);
       success = true;
     } catch (IOException e) {
-      SolrException.log(log, "Could not move file", e);
+      SolrException.log(LOG, "Could not move file", e);
     }
     return success;
   }
@@ -1282,10 +970,10 @@ public class IndexFetcher {
    * Copy all index files from the temp index dir to the actual index. The segments_N file is copied last.
    */
   private boolean moveIndexFiles(Directory tmpIdxDir, Directory indexDir) {
-    if (log.isDebugEnabled()) {
+    if (LOG.isDebugEnabled()) {
       try {
-        log.info("From dir files:" + Arrays.asList(tmpIdxDir.listAll()));
-        log.info("To dir files:" + Arrays.asList(indexDir.listAll()));
+        LOG.info("From dir files:" + Arrays.asList(tmpIdxDir.listAll()));
+        LOG.info("To dir files:" + Arrays.asList(indexDir.listAll()));
       } catch (IOException e) {
         throw new RuntimeException(e);
       }
@@ -1312,51 +1000,7 @@ public class IndexFetcher {
   }
 
   /**
-   * <p>
-   *   Copy all the tlog files from the temp tlog dir to the actual tlog dir, and reset
-   *   the {@link UpdateLog}. The copy will try to preserve the original tlog directory
-   *   if the copy fails.
-   * </p>
-   * <p>
-   *   This assumes that the tlog files transferred from the leader are in synch with the
-   *   index files transferred from the leader. The reset of the update log relies on the version
-   *   of the latest operations found in the tlog files. If the tlogs are ahead of the latest commit
-   *   point, it will not copy all the needed buffered updates for the replay and it will miss
-   *   some operations.
-   * </p>
-   */
-  private boolean moveTlogFiles(File tmpTlogDir) {
-    UpdateLog ulog = solrCore.getUpdateHandler().getUpdateLog();
-
-    VersionInfo vinfo = ulog.getVersionInfo();
-    vinfo.blockUpdates(); // block updates until the new update log is initialised
-    try {
-      // reset the update log before copying the new tlog directory
-      CdcrUpdateLog.BufferedUpdates bufferedUpdates = ((CdcrUpdateLog) ulog).resetForRecovery();
-      // try to move the temp tlog files to the tlog directory
-      if (!copyTmpTlogFiles2Tlog(tmpTlogDir)) return false;
-      // reinitialise the update log and copy the buffered updates
-      if (bufferedUpdates.tlog != null) {
-        // map file path to its new backup location
-        File parentDir = FileSystems.getDefault().getPath(solrCore.getUpdateHandler().getUpdateLog().getLogDir()).getParent().toFile();
-        File backupTlogDir = new File(parentDir, tmpTlogDir.getName());
-        bufferedUpdates.tlog = new File(backupTlogDir, bufferedUpdates.tlog.getName());
-      }
-      // init the update log with the new set of tlog files, and copy the buffered updates
-      ((CdcrUpdateLog) ulog).initForRecovery(bufferedUpdates.tlog, bufferedUpdates.offset);
-    }
-    catch (Exception e) {
-      log.error("Unable to copy tlog files", e);
-      return false;
-    }
-    finally {
-      vinfo.unblockUpdates();
-    }
-    return true;
-  }
-
-  /**
-   * Make file list
+   * Make file list 
    */
   private List<File> makeTmpConfDirFileList(File dir, List<File> fileList) {
     File[] files = dir.listFiles();
@@ -1369,14 +1013,14 @@ public class IndexFetcher {
     }
     return fileList;
   }
-
+  
   /**
    * The conf files are copied to the tmp dir to the conf dir. A backup of the old file is maintained
    */
   private void copyTmpConfFiles2Conf(File tmpconfDir) {
     boolean status = false;
     File confDir = new File(solrCore.getResourceLoader().getConfigDir());
-    for (File file : makeTmpConfDirFileList(tmpconfDir, new ArrayList<>())) {
+    for (File file : makeTmpConfDirFileList(tmpconfDir, new ArrayList<File>())) {
       File oldFile = new File(confDir, file.getPath().substring(tmpconfDir.getPath().length(), file.getPath().length()));
       if (!oldFile.getParentFile().exists()) {
         status = oldFile.getParentFile().mkdirs();
@@ -1408,45 +1052,63 @@ public class IndexFetcher {
     }
   }
 
-  /**
-   * The tlog files are moved from the tmp dir to the tlog dir as an atomic filesystem operation.
-   * A backup of the old directory is maintained. If the directory move fails, it will try to revert back the original
-   * tlog directory.
-   */
-  private boolean copyTmpTlogFiles2Tlog(File tmpTlogDir) {
-    Path tlogDir = FileSystems.getDefault().getPath(solrCore.getUpdateHandler().getUpdateLog().getLogDir());
-    Path backupTlogDir = FileSystems.getDefault().getPath(tlogDir.getParent().toAbsolutePath().toString(), tmpTlogDir.getName());
-
-    try {
-      Files.move(tlogDir, backupTlogDir, StandardCopyOption.ATOMIC_MOVE);
-    } catch (IOException e) {
-      SolrException.log(log, "Unable to rename: " + tlogDir + " to: " + backupTlogDir, e);
-      return false;
-    }
-
-    Path src = FileSystems.getDefault().getPath(backupTlogDir.toAbsolutePath().toString(), tmpTlogDir.getName());
-    try {
-      Files.move(src, tlogDir, StandardCopyOption.ATOMIC_MOVE);
-    } catch (IOException e) {
-      SolrException.log(log, "Unable to rename: " + src + " to: " + tlogDir, e);
-
-      // In case of error, try to revert back the original tlog directory
-      try {
-        Files.move(backupTlogDir, tlogDir, StandardCopyOption.ATOMIC_MOVE);
-      } catch (IOException e2) {
-        // bad, we were not able to revert back the original tlog directory
-        throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
-            "Unable to rename: " + backupTlogDir + " to: " + tlogDir);
-      }
-
-      return false;
-    }
-
-    return true;
-  }
-
   private String getDateAsStr(Date d) {
     return new SimpleDateFormat(SnapShooter.DATE_FMT, Locale.ROOT).format(d);
+  }
+
+  /**
+   * If the index is stale by any chance, load index from a different dir in the data dir.
+   */
+  protected static boolean modifyIndexProps(SolrCore solrCore, String tmpIdxDirName) {
+    LOG.info("New index installed. Updating index properties... index="+tmpIdxDirName);
+    Properties p = new Properties();
+    Directory dir = null;
+    try {
+      dir = solrCore.getDirectoryFactory().get(solrCore.getDataDir(), DirContext.META_DATA, solrCore.getSolrConfig().indexConfig.lockType);
+      if (slowFileExists(dir, IndexFetcher.INDEX_PROPERTIES)){
+        final IndexInput input = dir.openInput(IndexFetcher.INDEX_PROPERTIES, DirectoryFactory.IOCONTEXT_NO_CACHE);
+
+        final InputStream is = new PropertiesInputStream(input);
+        try {
+          p.load(new InputStreamReader(is, StandardCharsets.UTF_8));
+        } catch (Exception e) {
+          LOG.error("Unable to load " + IndexFetcher.INDEX_PROPERTIES, e);
+        } finally {
+          IOUtils.closeQuietly(is);
+        }
+      }
+      try {
+        dir.deleteFile(IndexFetcher.INDEX_PROPERTIES);
+      } catch (IOException e) {
+        // no problem
+      }
+      final IndexOutput out = dir.createOutput(IndexFetcher.INDEX_PROPERTIES, DirectoryFactory.IOCONTEXT_NO_CACHE);
+      p.put("index", tmpIdxDirName);
+      Writer os = null;
+      try {
+        os = new OutputStreamWriter(new PropertiesOutputStream(out), StandardCharsets.UTF_8);
+        p.store(os, IndexFetcher.INDEX_PROPERTIES);
+        dir.sync(Collections.singleton(INDEX_PROPERTIES));
+      } catch (Exception e) {
+        throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
+            "Unable to write " + IndexFetcher.INDEX_PROPERTIES, e);
+      } finally {
+        IOUtils.closeQuietly(os);
+      }
+      return true;
+
+    } catch (IOException e1) {
+      throw new RuntimeException(e1);
+    } finally {
+      if (dir != null) {
+        try {
+          solrCore.getDirectoryFactory().release(dir);
+        } catch (IOException e) {
+          SolrException.log(LOG, "", e);
+        }
+      }
+    }
+
   }
 
   private final Map<String, FileInfo> confFileInfoCache = new HashMap<>();
@@ -1483,10 +1145,10 @@ public class IndexFetcher {
     }
     return nameVsFile.isEmpty() ? Collections.EMPTY_LIST : nameVsFile.values();
   }
-
-  /**
+  
+  /** 
    * This simulates File.delete exception-wise, since this class has some strange behavior with it.
-   * The only difference is it returns null on success, throws SecurityException on SecurityException,
+   * The only difference is it returns null on success, throws SecurityException on SecurityException, 
    * otherwise returns Throwable preventing deletion (instead of false), for additional information.
    */
   static Throwable delete(File file) {
@@ -1499,13 +1161,13 @@ public class IndexFetcher {
       return other;
     }
   }
-
+  
   static boolean delTree(File dir) {
     try {
       org.apache.lucene.util.IOUtils.rm(dir.toPath());
       return true;
     } catch (IOException e) {
-      log.warn("Unable to delete directory : " + dir, e);
+      LOG.warn("Unable to delete directory : " + dir, e);
       return false;
     }
   }
@@ -1537,20 +1199,6 @@ public class IndexFetcher {
     if (replicationStartTimeStamp != null)
       timeElapsed = TimeUnit.SECONDS.convert((long) replicationTimer.getTime(), TimeUnit.MILLISECONDS);
     return timeElapsed;
-  }
-
-  List<Map<String, Object>> getTlogFilesToDownload() {
-    //make a copy first because it can be null later
-    List<Map<String, Object>> tmp = tlogFilesToDownload;
-    //create a new instance. or else iterator may fail
-    return tmp == null ? Collections.EMPTY_LIST : new ArrayList<>(tmp);
-  }
-
-  List<Map<String, Object>> getTlogFilesDownloaded() {
-    //make a copy first because it can be null later
-    List<Map<String, Object>> tmp = tlogFilesDownloaded;
-    // NOTE: it's safe to make a copy of a SynchronizedCollection(ArrayList)
-    return tmp == null ? Collections.EMPTY_LIST : new ArrayList<>(tmp);
   }
 
   List<Map<String, Object>> getConfFilesToDownload() {
@@ -1611,32 +1259,28 @@ public class IndexFetcher {
   private class FileFetcher {
     private final FileInterface file;
     private boolean includeChecksum = true;
-    private final String fileName;
-    private final String saveAs;
-    private final String solrParamOutput;
-    private final Long indexGen;
+    private String fileName;
+    private String saveAs;
+    private boolean isConf;
+    private Long indexGen;
 
-    private final long size;
+    private long size;
     private long bytesDownloaded = 0;
-    private byte[] buf;
-    private final Checksum checksum;
+    private byte[] buf = new byte[1024 * 1024];
+    private Checksum checksum;
     private int errorCount = 0;
     private boolean aborted = false;
 
     FileFetcher(FileInterface file, Map<String, Object> fileDetails, String saveAs,
-                String solrParamOutput, long latestGen) throws IOException {
+                boolean isConf, long latestGen) throws IOException {
       this.file = file;
       this.fileName = (String) fileDetails.get(NAME);
       this.size = (Long) fileDetails.get(SIZE);
-      buf = new byte[(int)Math.min(this.size, ReplicationHandler.PACKET_SZ)];
-      this.solrParamOutput = solrParamOutput;
+      this.isConf = isConf;
       this.saveAs = saveAs;
       indexGen = latestGen;
-      if (includeChecksum) {
+      if (includeChecksum)
         checksum = new Adler32();
-      } else {
-        checksum = null;
-      }
     }
 
     public long getBytesDownloaded() {
@@ -1647,21 +1291,6 @@ public class IndexFetcher {
      * The main method which downloads file
      */
     public void fetchFile() throws Exception {
-      bytesDownloaded = 0;
-      try {
-        fetch();
-      } catch(Exception e) {
-        if (!aborted) {
-          SolrException.log(IndexFetcher.log, "Error fetching file, doing one retry...", e);
-          // one retry
-          fetch();
-        } else {
-          throw e;
-        }
-      }
-    }
-    
-    private void fetch() throws Exception {
       try {
         while (true) {
           final FastInputStream is = getStream();
@@ -1681,11 +1310,14 @@ public class IndexFetcher {
       } finally {
         cleanup();
         //if cleanup succeeds . The file is downloaded fully. do an fsync
-        fsyncService.submit(() -> {
-          try {
-            file.sync();
-          } catch (IOException e) {
-            fsyncException = e;
+        fsyncService.submit(new Runnable(){
+          @Override
+          public void run() {
+            try {
+              file.sync();
+            } catch (IOException e) {
+              fsyncException = e;
+            }
           }
         });
       }
@@ -1706,14 +1338,11 @@ public class IndexFetcher {
           //read the size of the packet
           int packetSize = readInt(intbytes);
           if (packetSize <= 0) {
-            log.warn("No content received for file: {}", fileName);
+            LOG.warn("No content received for file: {}", fileName);
             return NO_CONTENT;
           }
-          //TODO consider recoding the remaining logic to not use/need buf[]; instead use the internal buffer of fis
-          if (buf.length < packetSize) {
-            //This shouldn't happen since sender should use PACKET_SZ and we init the buf based on that too
+          if (buf.length < packetSize)
             buf = new byte[packetSize];
-          }
           if (checksum != null) {
             //read the checksum
             fis.readFully(longbytes);
@@ -1727,7 +1356,7 @@ public class IndexFetcher {
             checksum.update(buf, 0, packetSize);
             long checkSumClient = checksum.getValue();
             if (checkSumClient != checkSumServer) {
-              log.error("Checksum not matched between client and server for file: {}", fileName);
+              LOG.error("Checksum not matched between client and server for file: {}", fileName);
               //if checksum is wrong it is a problem return for retry
               return 1;
             }
@@ -1735,7 +1364,7 @@ public class IndexFetcher {
           //if everything is fine, write down the packet to the file
           file.write(buf, packetSize);
           bytesDownloaded += packetSize;
-          log.debug("Fetched and wrote {} bytes of file: {}", bytesDownloaded, fileName);
+          LOG.debug("Fetched and wrote {} bytes of file: {}", bytesDownloaded, fileName);
           if (bytesDownloaded >= size)
             return 0;
           //errorCount is always set to zero after a successful packet
@@ -1744,7 +1373,7 @@ public class IndexFetcher {
       } catch (ReplicationHandlerException e) {
         throw e;
       } catch (Exception e) {
-        log.warn("Error in fetching file: {} (downloaded {} of {} bytes)",
+        LOG.warn("Error in fetching file: {} (downloaded {} of {} bytes)",
             fileName, bytesDownloaded, size, e);
         //for any failure, increment the error count
         errorCount++;
@@ -1787,7 +1416,7 @@ public class IndexFetcher {
       try {
         file.close();
       } catch (Exception e) {/* no-op */
-        log.error("Error closing file: {}", this.saveAs, e);
+        LOG.error("Error closing file: {}", this.saveAs, e);
       }
       if (bytesDownloaded != size) {
         //if the download is not complete then
@@ -1795,7 +1424,7 @@ public class IndexFetcher {
         try {
           file.delete();
         } catch (Exception e) {
-          log.error("Error deleting file: {}", this.saveAs, e);
+          LOG.error("Error deleting file: {}", this.saveAs, e);
         }
         //if the failure is due to a user abort it is returned normally else an exception is thrown
         if (!aborted)
@@ -1815,9 +1444,14 @@ public class IndexFetcher {
 //    //the method is command=filecontent
       params.set(COMMAND, CMD_GET_FILE);
       params.set(GENERATION, Long.toString(indexGen));
-      params.set(CommonParams.QT, ReplicationHandler.PATH);
+      params.set(CommonParams.QT, "/replication");
       //add the version to download. This is used to reserve the download
-      params.set(solrParamOutput, fileName);
+      if (isConf) {
+        //set cf instead of file for config file
+        params.set(CONF_FILE_SHORT, fileName);
+      } else {
+        params.set(FILE, fileName);
+      }
       if (useInternalCompression) {
         params.set(COMPRESSION, "true");
       }
@@ -1838,12 +1472,9 @@ public class IndexFetcher {
       InputStream is = null;
 
       // TODO use shardhandler
-      try (HttpSolrClient client = new Builder(masterUrl)
-          .withHttpClient(myHttpClient)
-          .withResponseParser(null)
-          .withConnectionTimeout(connTimeout)
-          .withSocketTimeout(soTimeout)
-          .build()) {
+      try (HttpSolrClient client = new HttpSolrClient(masterUrl, myHttpClient, null)) {
+        client.setSoTimeout(60000);
+        client.setConnectionTimeout(15000);
         QueryRequest req = new QueryRequest(params);
         response = client.request(req);
         is = (InputStream) response.get("stream");
@@ -1853,13 +1484,13 @@ public class IndexFetcher {
         return new FastInputStream(is);
       } catch (Exception e) {
         //close stream on error
-        org.apache.commons.io.IOUtils.closeQuietly(is);
+        IOUtils.closeQuietly(is);
         throw new IOException("Could not download file '" + fileName + "'", e);
       }
     }
   }
 
-  private static class DirectoryFile implements FileInterface {
+  private class DirectoryFile implements FileInterface {
     private final String saveAs;
     private Directory copy2Dir;
     private IndexOutput outStream;
@@ -1889,12 +1520,12 @@ public class IndexFetcher {
 
   private class DirectoryFileFetcher extends FileFetcher {
     DirectoryFileFetcher(Directory tmpIndexDir, Map<String, Object> fileDetails, String saveAs,
-                         String solrParamOutput, long latestGen) throws IOException {
-      super(new DirectoryFile(tmpIndexDir, saveAs), fileDetails, saveAs, solrParamOutput, latestGen);
+                boolean isConf, long latestGen) throws IOException {
+      super(new DirectoryFile(tmpIndexDir, saveAs), fileDetails, saveAs, isConf, latestGen);
     }
   }
 
-  private static class LocalFsFile implements FileInterface {
+  private class LocalFsFile implements FileInterface {
     private File copy2Dir;
 
     FileChannel fileChannel;
@@ -1938,8 +1569,8 @@ public class IndexFetcher {
 
   private class LocalFsFileFetcher extends FileFetcher {
     LocalFsFileFetcher(File dir, Map<String, Object> fileDetails, String saveAs,
-                       String solrParamOutput, long latestGen) throws IOException {
-      super(new LocalFsFile(dir, saveAs), fileDetails, saveAs, solrParamOutput, latestGen);
+                boolean isConf, long latestGen) throws IOException {
+      super(new LocalFsFile(dir, saveAs), fileDetails, saveAs, isConf, latestGen);
     }
   }
 
@@ -1947,14 +1578,12 @@ public class IndexFetcher {
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.set(COMMAND, CMD_DETAILS);
     params.set("slave", false);
-    params.set(CommonParams.QT, ReplicationHandler.PATH);
+    params.set(CommonParams.QT, "/replication");
 
     // TODO use shardhandler
-    try (HttpSolrClient client = new HttpSolrClient.Builder(masterUrl)
-        .withHttpClient(myHttpClient)
-        .withConnectionTimeout(connTimeout)
-        .withSocketTimeout(soTimeout)
-        .build()) {
+    try (HttpSolrClient client = new HttpSolrClient(masterUrl, myHttpClient)) {
+      client.setSoTimeout(60000);
+      client.setConnectionTimeout(15000);
       QueryRequest request = new QueryRequest(params);
       return client.request(request);
     }
@@ -1962,7 +1591,6 @@ public class IndexFetcher {
 
   public void destroy() {
     abortFetch();
-    HttpClientUtil.close(myHttpClient);
   }
 
   String getMasterUrl() {
@@ -1980,8 +1608,6 @@ public class IndexFetcher {
   static final String INDEX_REPLICATED_AT = "indexReplicatedAt";
 
   static final String TIMES_INDEX_REPLICATED = "timesIndexReplicated";
-
-  static final String CLEARED_LOCAL_IDX = "clearedLocalIndexFirst";
 
   static final String CONF_FILES_REPLICATED = "confFilesReplicated";
 
